Prevent layout shift while Anton font is loading.

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: "Anton";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("fonts/Anton/Anton-Regular.ttf");
-}
-
 body {
   background-color: #f4ea0c;
   min-height: 100dvh;
